# lambo

./: .gitignore  README.md  default.nix  fourmolu.yaml  lambo.cabal  shell.nix
exe/: Main.hs
lib/: Lambo.hs
lib/Lambo/: Evaluator.hs  Expression.hs  Index.hs  Lexer.hs  Parser.hs  Printer.hs  QuasiQuoter.hs  QuasiQuoters.hs  Repl.hs  Syntax.hs
lib/Lambo/Expression/: Sugar.hs
test/: Main.hs
