cabal-version: 2.4

name:    lambo
version: 0.0.0.0


common common
  build-depends: base
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints


common executable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N


library
  import: common
  hs-source-dirs: lib
  build-depends:
    , megaparsec
    , text
  exposed-modules:
    Lambo
    Lambo.Lexer
    Lambo.Parser
    Lambo.Syntax


executable lambo
  import:
    , common
    , executable
  main-is: Main.hs
  hs-source-dirs: exe
  build-depends:
    , lambo
