cabal-version: 2.2

name:    lambo
version: 0.0.0.0

common common
  build-depends: base
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints

common executable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: common
  hs-source-dirs: lib
  build-depends:
    , Earley
    , generic-lens
    , lens
    , megaparsec
    , pretty-simple
    , repline
    , scientific
    , template-haskell
    , text
    , transformers
    , witch
  exposed-modules:
    Lambo
    Lambo.Evaluator
    Lambo.Expression
    Lambo.Expression.Sugar
    Lambo.Lexer
    Lambo.Parser
    Lambo.Printer
    Lambo.QuasiQuoters
    Lambo.Repl

executable lambo
  import:
    , common
    , executable
  main-is: Main.hs
  hs-source-dirs: exe
  build-depends:
    , lambo
    , optparse-applicative
    , pretty-simple
    , text

test-suite test
  import:
    , common
    , executable
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
    , lambo
    , tasty
    , tasty-hunit
    , text
